# Lexora

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  env.example  pyproject.toml
.claude/: settings.json
.claude/commands/: adr.md  check-event.md  resume.md  scaffold-module.md  verify-milestone.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-build.yml  docker-build.yml.disabled  lint.yml  pr-check.yml  pr-check.yml.disabled  security.yml  test.yml  test.yml.disabled
backend/: Makefile
backend/docker_compose/adminer/: docker-compose.yml
backend/docker_compose/beat/: entrypoint.sh
backend/docker_compose/db/: docker-compose.yml
backend/docker_compose/django/: docker-compose.yml
backend/docker_compose/flower/: entrypoint.sh
backend/docker_compose/pgadmin/: docker-compose.yml
backend/docker_compose/worker_1/: entrypoint.sh
backend/docker_compose/worker_2/: entrypoint.sh
backend/docker_compose/worker_3/: entrypoint.sh
backend/docker_compose/worker_4/: entrypoint.sh
backend/src/: celery_app.py
backend/src/apps/profiles/: entities.py
docker_compose/ai_mentor/: Dockerfile  docker-compose.yml
docker_compose/anki/: Dockerfile  docker-compose.yml
docker_compose/audio/: Dockerfile  docker-compose.yml
docker_compose/db/: backup-prod.sh  backup.sh  docker-compose-prod.yml  docker-compose.yml  prometheus.yml
docker_compose/db/backups/: verify_backup.sh
docker_compose/llm/: Dockerfile  docker-compose.yml
docker_compose/nginx/: Dockerfile  nginx-prod.conf  nginx.conf
docker_compose/odoo/: Dockerfile  docker-compose.yml  promtail-config.yml
docker_compose/rabbitmq/: docker-compose.yml
docker_compose/redis/: docker-compose.yml
docker_compose/translation/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PLAN.md  SPEC.md  TASKS.md  UI_REDESIGN_HEADER.md
extension/: background.js  content.js  manifest.json  newtab.css  newtab.html  newtab.js  options.html  options.js  overlay.js  popup.html  popup.js
requirements/: base-requirements.txt  dev-requirements.txt
scripts/: backup_odoo.sh  db_shell.sh  health_check.sh  logs.sh  odoo_shell.sh  restore_odoo.sh  update_module.sh
services/ai_mentor/: main.py  requirements.txt
services/anki/: diag_apkg.py  main.py  requirements.txt
services/anki/tests/: test_parsers.py
services/audio/: main.py  requirements.txt
services/llm/: main.py  requirements.txt
services/translation/: main.py  requirements.txt
src/addons/language_anki_jobs/: __init__.py  __manifest__.py
src/addons/language_anki_jobs/controllers/: portal.py
src/addons/language_anki_jobs/data/: ir_cron_anki.xml  website_menus.xml
src/addons/language_anki_jobs/models/: __init__.py  language_anki_job.py
src/addons/language_anki_jobs/security/: ir.model.access.csv
src/addons/language_anki_jobs/tests/: __init__.py  test_language_anki_job.py
src/addons/language_anki_jobs/views/: language_anki_job_views.xml  portal_anki.xml
src/addons/language_audio/: __manifest__.py
src/addons/language_audio/controllers/: portal.py
src/addons/language_audio/data/: ir_cron_audio.xml
src/addons/language_audio/models/: __init__.py  language_audio.py  language_entry_audio.py
src/addons/language_audio/security/: ir.model.access.csv
src/addons/language_audio/tests/: __init__.py  test_language_audio.py
src/addons/language_audio/views/: language_audio_views.xml  portal_audio.xml
src/addons/language_chat/: __init__.py  __manifest__.py
src/addons/language_chat/controllers/: portal.py
src/addons/language_chat/data/: chat_channels.xml  ir_cron_chat_gc.xml  website_menus.xml
src/addons/language_chat/models/: discuss_channel.py
src/addons/language_chat/tests/: __init__.py  test_language_chat.py
src/addons/language_chat/views/: portal_chat.xml
src/addons/language_core/: __manifest__.py
src/addons/language_core/data/: system_parameters.xml
src/addons/language_core/models/: __init__.py  mixins.py  rabbitmq_consumer.py  (+1 more)
src/addons/language_dashboard/: __manifest__.py
src/addons/language_enrichment/: __manifest__.py
src/addons/language_helpdesk/: __manifest__.py
src/addons/language_learning/: __init__.py  __manifest__.py
src/addons/language_portal/: __init__.py  __manifest__.py
src/addons/language_pvp/: __manifest__.py
src/addons/language_security/: __manifest__.py
src/addons/language_translation/: __manifest__.py
src/addons/language_words/: __manifest__.py
src/addons/lexora_helpdesk/: __manifest__.py
src/configs/: odoo.conf.example
(+150 files in other folders)
